src/css/style.scss
@import '_reset.scss';

/* Mixins
-------------------------------- */
@import '_mixins.scss';

BODY {
	padding: $base-margin;
	background: #EEE;
	font: #{$base-font-size}/#{$base-line-height} #{$base-font-family};
	color: $base-font-color;
	@media (max-width: $break-point ) {
		padding: 30px 0 0;
		}
	}
A {
	color: $base-link-color;
	&:hover {
		text-decoration: none;
		color: lighten($base-link-color, 20);
		}
	}
/* Headers
-------------------------------- */	
H1 {
	font-size: $base-font-size * 3.5;
	@extend %headers-style;
	}
H2 {
	font-size: $base-font-size * 2.5;
	@extend %headers-style;
	}	
H3 {
	font-size: $base-font-size * 2.3;
	@extend %headers-style;
	}	
H4 {
	font-size: $base-font-size * 2;
	@extend %headers-style;
	}	
H5 {
	font-size: $base-font-size * 1.7;
	@extend %headers-style;
	}		
H6 {
	font-size: $base-font-size * 1.5;
	@extend %headers-style;
	}		
/* Codes
-------------------------------- */		
PRE,
CODE {
	border-radius: 4px;	
	}
CODE {
	display: inline-block;
	padding: 0 3px;
	background: palegoldenrod;
	text-shadow: 1px 1px white;
	font-family: Consolas, Monaco, Lucida Console, monospace;
	font-size: 12px;
	line-height: 1.6;
	color: darkred;
	}
	PRE CODE {
		display: block;
		background: transparent;
		color: inherit;
		}	
/* Common
-------------------------------- */	
.clear {
	&:after {
		@extend %clear;
		}
	}
.logo {
	font-family: 'Lobster', Georgia, cursive;
	}
.i-ljuser {
	white-space: nowrap;
	}	
.i-ljuser-userhead {
	vertical-align: -2px;
	margin-right: 3px;
	}	
/* Layout
-------------------------------- */	
.l-page {
	position: relative;
	min-width: 320px;
	max-width: 1200px;
	margin: $half-logo-size auto 0;
	padding: $base-margin;
	background: #FFF;
    box-shadow: 0 5px 10px $base-shadow-color;
	}	
	.l-header,
	.l-content {
		@include margin ( bottom );
		&:after {
			@extend %clear;
			}
		}	
	.l-content {
		@include padding ( bottom );
		@include border ( bottom );		
		}	
	.l-main,	
	.l-aside {
		float: left;
		}
		.l-main {
			width: 100%;
			}
			.post {
				margin-right: 19em;	
				@media (max-width: $break-point ) {
					margin-right: 0;	
					}
				}
				.p-layout-onecolumn .post {
					margin-right: 0;
					}
				.p-layout-mainpage .post {
					margin-right: 0;					
					@media (min-width: $break-point ) {
						float: left;
						@include margin ( bottom );	
						@include padding ( bottom );
						width: 48.5%;
						@include border ( bottom );
						&:nth-child(2n+1){
							clear: left;
							}
						&:nth-child(2n){
							float: right;
							clear: right;
							}
					}

				}	

		.l-aside {
			width: 17em;
			margin-left: -17em;
			@media (max-width: $break-point ) {
				width: 100%;
				margin-left: 0;
				@include padding ( top );
				@include border ( top );
				}
			}
		
/* Header
-------------------------------- */
@import '_header.scss';
/* Footer
-------------------------------- */
@import '_footer.scss';
/* Post
-------------------------------- */
@import '_post.scss';			
/* Aside
-------------------------------- */
@import '_aside.scss';	
/* Animations
-------------------------------- */
@import '_animations.scss';

